Thêm ClientAuctionApi và AuctionListController